[#58] feat: interact KaKao Map API's Place

--- a/moinda-api/src/main/resources/static/css/styles.css
+++ b/moinda-api/src/main/resources/static/css/styles.css
@@ -5260,8 +5260,8 @@ textarea.form-control-lg {
   left: 0;
   z-index: var(--bs-modal-zindex);
   display: none;
-  width: 100%;
-  height: 100%;
+  width: 400px;
+  height: 500px;
   overflow-x: hidden;
   overflow-y: auto;
   outline: 0;
@@ -5381,10 +5381,11 @@ textarea.form-control-lg {
   margin: calc(var(--bs-modal-footer-gap) * 0.5);
 }
 
-@media (min-width: 576px) {
+@media (min-width: 400px) {
   .modal {
     --bs-modal-margin: 1.75rem;
     --bs-modal-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    height: 500px;
   }
   .modal-dialog {
     max-width: var(--bs-modal-width);
@@ -10992,4 +10993,132 @@ header.masthead h1, header.masthead .h1 {
 }
 #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption, #portfolio .container-sm .portfolio-box:hover .portfolio-box-caption, #portfolio .container-md .portfolio-box:hover .portfolio-box-caption, #portfolio .container-lg .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xl .portfolio-box:hover .portfolio-box-caption, #portfolio .container-xxl .portfolio-box:hover .portfolio-box-caption {
   opacity: 1;
+}
+
+
+/* 카카오 맵 관련 화면 CSS */
+
+#map {
+  width:100%;
+  height:100%;
+  position:relative;
+  overflow:hidden;
+}
+
+.map_wrap, .map_wrap * {
+  margin:0;
+  padding:0;
+  font-family:'Malgun Gothic',
+  dotum,'돋움',sans-serif;
+  font-size:12px;
+
+}
+.map_wrap a, .map_wrap a:hover, .map_wrap a:active{
+  color:#000;
+  text-decoration: none;
+}
+
+.map_wrap {
+  position:relative;
+  width:100%;
+  height:500px;
+}
+#menu_wrap {
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  width:100%;
+  margin: 0px 0 20px 0px;
+  padding:5px;
+  overflow-y:auto;
+  background:rgba(255, 255, 255, 0.7);
+  z-index: 1;
+  font-size:12px;
+  border-radius: 10px;
+  border: solid 1px black;
+}
+.bg_white {background:#fff;}
+
+#menu_wrap hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 2px solid #5F5F5F;
+  margin:3px 0;
+}
+
+#menu_wrap .option{text-align: center;}
+#menu_wrap .option p {margin:10px 0;}
+#menu_wrap .option button {margin-left:5px;}
+#placesList li {list-style: none;}
+#placesList .item {
+  position:relative;
+  border-bottom:1px solid #888;
+  overflow: hidden;
+  cursor: pointer;
+  min-height: 65px;
+}
+#placesList .item span {display: block;margin-top:4px;}
+#placesList .item h5, #placesList .item .info {text-overflow: ellipsis;overflow: hidden;white-space: nowrap;}
+#placesList .item .info{padding:10px 0 10px 55px;}
+#placesList .info .gray {color:#8a8a8a;}
+#placesList .info .jibun {padding-left:26px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
+#placesList .info .tel {color:#009900;}
+#placesList .item .markerbg {float:left;position:absolute;width:36px; height:37px;margin:10px 0 0 10px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;}
+#placesList .item .marker_1 {background-position: 0 -10px;}
+#placesList .item .marker_2 {background-position: 0 -56px;}
+#placesList .item .marker_3 {background-position: 0 -102px}
+#placesList .item .marker_4 {background-position: 0 -148px;}
+#placesList .item .marker_5 {background-position: 0 -194px;}
+#placesList .item .marker_6 {background-position: 0 -240px;}
+#placesList .item .marker_7 {background-position: 0 -286px;}
+#placesList .item .marker_8 {background-position: 0 -332px;}
+#placesList .item .marker_9 {background-position: 0 -378px;}
+#placesList .item .marker_10 {background-position: 0 -423px;}
+#placesList .item .marker_11 {background-position: 0 -470px;}
+#placesList .item .marker_12 {background-position: 0 -516px;}
+#placesList .item .marker_13 {background-position: 0 -562px;}
+#placesList .item .marker_14 {background-position: 0 -608px;}
+#placesList .item .marker_15 {background-position: 0 -654px;}
+#pagination {margin:10px auto;text-align: center;}
+#pagination a {display:inline-block;margin-right:10px;}
+#pagination .on {font-weight: bold; cursor: default; color:#f4623a;}
+
+
+/* 모달 스타일 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px 20px 50px 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
