--- a/moinda-api/src/main/resources/templates/maps.html
+++ b/moinda-api/src/main/resources/templates/maps.html
@@ -7,7 +7,7 @@
         .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
         .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
         .map_wrap {position:relative;width:100%;height:500px;}
-        #menu_wrap {position:absolute;top:0;left:0;bottom:0;width:500px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px; outline: solid 1px black;}
+        #menu_wrap {position:absolute;top:0;left:0;bottom:0;width:550px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px; outline: solid 1px black;}
         .bg_white {background:#fff;}
         #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
         #menu_wrap .option{text-align: center;}
@@ -21,51 +21,91 @@
         #placesList .info .gray {color:#8a8a8a;}
         #placesList .info .jibun {padding-left:26px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/places_jibun.png) no-repeat;}
         #placesList .info .tel {color:#009900;}
+        /* 검색시 각 장소 목록 옆의 마커 */
         #placesList .item .markerbg {float:left;position:absolute;width:36px; height:37px;margin:10px 0 0 10px;background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;}
-        #placesList .item .marker_1 {background-position: 0 -10px;}
-        #placesList .item .marker_2 {background-position: 0 -56px;}
-        #placesList .item .marker_3 {background-position: 0 -102px}
-        #placesList .item .marker_4 {background-position: 0 -148px;}
-        #placesList .item .marker_5 {background-position: 0 -194px;}
-        #placesList .item .marker_6 {background-position: 0 -240px;}
-        #placesList .item .marker_7 {background-position: 0 -286px;}
-        #placesList .item .marker_8 {background-position: 0 -332px;}
-        #placesList .item .marker_9 {background-position: 0 -378px;}
-        #placesList .item .marker_10 {background-position: 0 -423px;}
-        #placesList .item .marker_11 {background-position: 0 -470px;}
-        #placesList .item .marker_12 {background-position: 0 -516px;}
-        #placesList .item .marker_13 {background-position: 0 -562px;}
-        #placesList .item .marker_14 {background-position: 0 -608px;}
-        #placesList .item .marker_15 {background-position: 0 -654px;}
         #pagination {margin:10px auto;text-align: center;}
         #pagination a {display:inline-block;margin-right:10px;}
-        #pagination .on {font-weight: bold; cursor: default;color:#777;}
+        #pagination .on {font-weight: bold; cursor: default; color:blue;}
+
+        /* 모달 스타일 */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 100px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 600px;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-<div class="map_wrap">
-    <div id="map" style="width:100%;height:200%;position:relative;overflow:hidden;"></div>
 
-    <div id="menu_wrap" class="bg_white">
-        <div class="option">
-            <div>
-                <form onsubmit="searchPlaces(); return false;">
-                    키워드 : <input style="padding-left: 5px" type="text" id="keyword" size="20" placeholder="키워드를 입력해주세요.">
-                    <button id="search" type="submit">검색하기</button>
-                </form>
+<button id="open-modal">장소 검색</button>
+
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <div class="map_wrap">
+            <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
+            <div id="menu_wrap" class="bg_white">
+                <div class="option">
+                    <div>
+                        <form onsubmit="searchPlaces(); return false;">
+                            키워드 : <input style="padding-left: 5px" type="text" id="keyword" size="20" placeholder="키워드를 입력해주세요.">
+                            <button id="search" type="submit">검색하기</button>
+                        </form>
+                    </div>
+                </div>
+                <hr>
+                <ul id="placesList">
+                    <li style="text-align: center">조회된 장소가 없습니다.</li>
+                </ul>
+                <div id="pagination"></div>
             </div>
         </div>
-        <hr>
-        <ul id="placesList">
-            <li style="text-align: center">조회된 장소가 없습니다.</li>
-        </ul>
-        <div id="pagination"></div>
     </div>
 </div>
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4f0dae21f900df3142fba533f31b82b5&libraries=services"></script>
 <script>
+    const modal = document.getElementById("myModal");
+    const openModalButton = document.getElementById("open-modal");
+    const closeButton = document.getElementsByClassName("close")[0];
 
+    openModalButton.onclick = () => {
+        modal.style.display = "block";
+    };
+
+    closeButton.onclick = () => {
+        modal.style.display = "none";
+    };
     // 장소 검색 객체를 생성합니다
     var ps = new kakao.maps.services.Places();
 
@@ -98,6 +138,8 @@
             // 검색 목록를 표출합니다
             displayPlaces(data);
 
+            addEventPlaceItems();
+
             // 페이지 번호를 표출합니다
             displayPagination(pagination);
         } else if (status === kakao.maps.services.Status.ZERO_RESULT) {
@@ -127,15 +169,6 @@
             var itemEl = getListItem(i, places[i]); // 검색 결과 항목 Element를 생성합니다
 
             fragment.appendChild(itemEl);
-// TODO :  모달로 띄우고 그 안에서 검색하고 나온 데어터를 눌렀을때 화면에 입력시키게 하자.
-            // TODO : 원하는 동작이 안나오는중 가장 마지막 데이터의 값을 가져오고 있음,
-            var info = itemEl.querySelector(".info")
-            var placeName = info.querySelector("h5[name='placeName']")
-            var primaryAddress = info.querySelector("span[name='primaryAddress']")
-            info.addEventListener("click", () => {
-                console.log("placeName : ", placeName)
-                console.log("primaryAddress : ", primaryAddress)
-            })
         }
 
         // 검색결과 항목들을 검색결과 목록 Element에 추가합니다
@@ -204,6 +237,21 @@
         while (el.hasChildNodes()) {
             el.removeChild (el.lastChild);
         }
+    }
+    // 검색 목록에 클릭 이벤트를 추가해둔다.
+    function addEventPlaceItems() {
+        const infoElement = document.querySelectorAll('.info')
+
+        infoElement.forEach(item => {
+            var placeName = item.querySelector("h5[name='placeName']")
+            var primaryAddress = item.querySelector("span[name='primaryAddress']")
+
+            item.addEventListener("click", () => {
+                console.log("placeName : ", placeName)
+                console.log("primaryAddress : ", primaryAddress)
+                modal.style.display = "none";
+            })
+        })
     }
 </script>
 </body>
