--- a/moinda-api/src/main/resources/templates/fragment/footer.html
+++ b/moinda-api/src/main/resources/templates/fragment/footer.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<th:block th:fragment="footer">
   <!-- Footer-->
-  <footer class="bg-light py-5">
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - Company Name</div></div>
-  </footer>
+<!--  <footer class="bg-light py-5">-->
+<!--    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - Company Name</div></div>-->
+<!--  </footer>-->
+<th:block th:fragment="footer">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- SimpleLightbox plugin JS-->
