--- a/moinda-api/src/main/resources/templates/signup.html
+++ b/moinda-api/src/main/resources/templates/signup.html
@@ -5,7 +5,7 @@
     <th:block th:fragment="body">
 
         <!-- Masthead-->
-        <header class="masthead">
+        <header class="masthead" style="height: 100%">
             <div class="container px-4 px-lg-5 h-75">
                 <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
